handled the case for old doc files